--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -132,9 +132,10 @@ jobs:
           fi
           
           echo "🔍 Checking if the database exists..."
+          pnpm wrangler kv namespace list
           KV_LIST=$(pnpm wrangler kv namespace list)
           
-          if echo "$KV_LIST" | jq -e ".[] | select(.title == \"$NAME\")" > /dev/null; then
+          if echo "$KV_LIST" | jq -e ".[] | select(.title == \"$NAME\")"; then
             echo "✅ Database $NAME already exists."
             KV_ID=$(echo "$KV_LIST" | jq -r ".[] | select(.title == \"$NAME\") | .id")
             echo "KV_NAMESPACE_ID: $KV_ID"
@@ -163,7 +164,7 @@ jobs:
           echo "🔍 Checking if the database exists..."
           DB_LIST=$(pnpm wrangler d1 list --json)
           
-          if echo "$DB_LIST" | jq -e ".[] | select(.name == \"$NAME\")" > /dev/null; then
+          if echo "$DB_LIST" | jq -e ".[] | select(.name == \"$NAME\")"; then
             echo "✅ Database $NAME already exists."
             D1_ID=$(echo "$DB_LIST" | jq -r ".[] | select(.name == \"$NAME\") | .uuid")
             echo "D1_DATABASE_ID: $D1_ID"
@@ -214,34 +215,6 @@ jobs:
             echo "❌ Failed. HTTP: $HTTP_CODE, Response: $RESPONSE_BODY"
             exit 1
           fi
-
-      - name: 📮 设置邮件接收 / Set up email receiving
-        run: |
-
-          echo "🛠️ Starting email receiving setup..."
-          
-          WORKER_URL="${CUSTOM_DOMAIN:+https://$CUSTOM_DOMAIN}"
-          WORKER_URL="${WORKER_URL:-${{ steps.deploy.outputs.worker_url }}}"
-
-          HTTP_CODE=$(curl -sL --post301 --post302 --post303 -w "%{http_code}" -o response.txt \
-            -X POST \
-            -H "Content-Type: application/json" \
-            -d "{\"domainList\": $DOMAIN,\"accountId\":\"$CLOUDFLARE_ACCOUNT_ID\",\"token\":\"$CLOUDFLARE_API_TOKEN\",\"workerName\":\"$NAME\"}" \
-            "$WORKER_URL/api/initForward")
-
-          RESPONSE_BODY=$(cat response.txt)
-
-          if [ "$RESPONSE_BODY" = "success" ]; then
-            echo "✅ Setup completed."
-            exit 0
-          fi
-          
-          if [ "$HTTP_CODE" = "200" ] && [ "$RESPONSE_BODY" != "success" ]; then
-            echo "::error:: Email receiving setup failed: $RESPONSE_BODY"
-            exit 0
-          fi
-          
-          echo "::error:: Email receiving setup failed: $HTTP_CODE $RESPONSE_BODY" 
 
       - name: 🗑️ 删除运行记录 / Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
