删除 GitHub Actions 设置邮件接收步骤

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -134,7 +134,7 @@ jobs:
           echo "🔍 Checking if the database exists..."
           
           set +e
-            KV_LIST=$(pnpm wrangler kv namespace list --json 2>&1)
+            KV_LIST=$(pnpm wrangler kv namespace list 2>&1)
             STATUS=$?
           set -e
           
