--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -200,9 +200,18 @@ jobs:
         working-directory: ./mail-worker
         run: |
           echo "🚀 Starting deployment..."
+          pnpm wrangler deploy -c wrangler-action.toml | tee deploy.log | grep -v "https://.*\.workers\.dev" || true
+          WORKER_URL=$(grep -o "https://.*\.workers\.dev" deploy.log || echo "")
           
-          pnpm wrangler deploy -c wrangler-action.toml 2>&1 | tee deploy.log 
+          if grep -q "\[ERROR\]" deploy.log; then
+            exit 1
+          fi
           
+          if [ -n "$WORKER_URL" ]; then
+            echo "::add-mask::$WORKER_URL"
+          fi
+          
+          echo "worker_url=$WORKER_URL" >> $GITHUB_OUTPUT
           echo "✅ Setup completed."
 
       - name: ♻️ 初始化数据库 / Initialize database
